--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "websiteutils",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Episodic website scripts",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,9 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-terser": "^0.4.3",
-    "js-cookie": "^3.0.5",
     "rollup": "^3.29.1"
+  },
+  "dependencies": {
+    "js-cookie": "^3.0.5"
   }
 }
